--- a/style.css
+++ b/style.css
@@ -1,12 +1,24 @@
 *{
  margin: 0%;
  padding: 0%;   
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 #Main{
     margin: 5%;
     border-style: solid;
-    border-radius: 25px;
-    border-width: 4px;
+    border-width: 3px;
     padding: 70px;
 }
+
+#header{
+    margin: 10px;
+}
+
+h2{
+    font-weight: 450;
+    font-size: 55px;
+    padding: 10px 0px;
+}
+
+
