--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
  margin: 0%;
  padding: 0%;   
  font-family: Arial, Helvetica, sans-serif;
+ font-size: 19px;
 }
 
 #Main{
@@ -12,7 +13,7 @@
 }
 
 #header{
-    margin: 10px;
+    margin: 20px;
 }
 
 h2{
@@ -21,4 +22,12 @@ h2{
     padding: 10px 0px;
 }
 
-
+#role{
+    font-weight: 600;
+    font-style: italic;
+    color:rgb(22 163 74);
+}
+#header p{
+    margin: 15px 0px;
+    
+}
